# pocketsphinx_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: decoder_jsgf.launch  decoder_kws.launch
msg/: DecodedPhrase.msg
scripts/: decoder.py  send_audio.py
share/: grammar_ru.gram  voice_cmd_ru.dic  voice_cmd_ru.kwlist
srv/: PocketsphinxControl.srv
