<?xml version="2.0"?>
<package format="2">
  <name>pocketsphinx_ros</name>
  <version>1.1.0</version>
  <description>
    ROS package for pocketsphinx speech recognizer
  </description>
  <maintainer email="pankajbaranwal@lithics.in">Pankaj Baranwal</maintainer>
  <maintainer email="asanmalyshev@gmail.com">Alexander Malyshev</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/asanmalyshev/pocketsphinx_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend><!-- only needed for demos -->
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
